--- a/htmlcss/step-project/index.html
+++ b/htmlcss/step-project/index.html
@@ -8,6 +8,7 @@
     <title>STEP-PROJECT</title>
   </head>
   <body>
+    <!-- A: kodlari format edek z/o [shift+alt+f] -->
     <div class="container">
       <h1 class="header">О курсе</h1>
       <main class="main">
