--- a/htmlcss/step-project/index.html
+++ b/htmlcss/step-project/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <!-- A: kodlari format edek z/o [shift+alt+f] -->
+    <!-- S: done ✅ -->
     <div class="container">
       <h1 class="header">О курсе</h1>
       <main class="main">
